{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 226,
  "lineage": "93129c47-e1cc-57bb-c45c-3cb99ff456dd",
  "resources": [
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "modify_default_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-02a6f43b87ace3dbb",
            "id": "rtb-02a6f43b87ace3dbb",
            "owner_id": "126864849194",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f01982969db4faea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-igw"
            },
            "vpc_id": "vpc-0e445ded02b8e3ff2"
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0949b491fa2bf7ba0",
            "domain": "vpc",
            "id": "eipalloc-02945d7a9087b13bd",
            "network_interface": "eni-099a4e5cf5619d28c",
            "private_dns": "ip-192-168-0-94.us-west-1.compute.internal",
            "private_ip": "192.168.0.94",
            "public_dns": "ec2-54-219-109-232.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.109.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "prod-svr-db-01",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d705db840ec5f0c5",
            "arn": "arn:aws:ec2:us-west-1:126864849194:instance/i-080e27485d62da193",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-080e27485d62da193",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh key",
            "monitoring": true,
            "primary_network_interface_id": "eni-050861325f06701ee",
            "private_dns": "ip-192-168-1-53.us-west-1.compute.internal",
            "private_ip": "192.168.1.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-038e0c0f2c8a6fb73",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07752cf073680cbbc",
            "tags": {
              "Name": "prod-svr-db-01"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "root-volume-prod-svr-db-01"
            },
            "vpc_security_group_ids": [
              "sg-07ec24f66d9152b6c"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.db_server",
            "module.security_group.aws_security_group.web_server",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": "prod-svr-db-02",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d705db840ec5f0c5",
            "arn": "arn:aws:ec2:us-west-1:126864849194:instance/i-0c7385ceb7f9880c8",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c7385ceb7f9880c8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh key",
            "monitoring": true,
            "primary_network_interface_id": "eni-0132dc83601788e71",
            "private_dns": "ip-192-168-1-146.us-west-1.compute.internal",
            "private_ip": "192.168.1.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-05f49f13bc9bb7549",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07752cf073680cbbc",
            "tags": {
              "Name": "prod-svr-db-02"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "root-volume-prod-svr-db-02"
            },
            "vpc_security_group_ids": [
              "sg-07ec24f66d9152b6c"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.db_server",
            "module.security_group.aws_security_group.web_server",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": "prod-svr-web-01",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d705db840ec5f0c5",
            "arn": "arn:aws:ec2:us-west-1:126864849194:instance/i-00af5e915eeedfa12",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-00af5e915eeedfa12",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh key",
            "monitoring": true,
            "primary_network_interface_id": "eni-0e6aa2b637f1c3a6f",
            "private_dns": "ip-192-168-0-215.us-west-1.compute.internal",
            "private_ip": "192.168.0.215",
            "public_dns": "ec2-50-18-83-135.us-west-1.compute.amazonaws.com",
            "public_ip": "50.18.83.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0e19e6b2795259257",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f15f7659678aa165",
            "tags": {
              "Name": "prod-svr-web-01"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "root-volume-prod-svr-web-01"
            },
            "vpc_security_group_ids": [
              "sg-0816b6d069cc22d75"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.db_server",
            "module.security_group.aws_security_group.web_server",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": "prod-svr-web-02",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d705db840ec5f0c5",
            "arn": "arn:aws:ec2:us-west-1:126864849194:instance/i-04d2ef8d1f1b0ff65",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04d2ef8d1f1b0ff65",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh key",
            "monitoring": true,
            "primary_network_interface_id": "eni-04905b2f0eee80721",
            "private_dns": "ip-192-168-0-98.us-west-1.compute.internal",
            "private_ip": "192.168.0.98",
            "public_dns": "ec2-54-215-246-115.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.246.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-043e92a43642c2555",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f15f7659678aa165",
            "tags": {
              "Name": "prod-svr-web-02"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "root-volume-prod-svr-web-02"
            },
            "vpc_security_group_ids": [
              "sg-0816b6d069cc22d75"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.db_server",
            "module.security_group.aws_security_group.web_server",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": "prod-svr-web-03",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d705db840ec5f0c5",
            "arn": "arn:aws:ec2:us-west-1:126864849194:instance/i-0417e5dc69153bd97",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0417e5dc69153bd97",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh key",
            "monitoring": true,
            "primary_network_interface_id": "eni-06d81312847b387f3",
            "private_dns": "ip-192-168-0-33.us-west-1.compute.internal",
            "private_ip": "192.168.0.33",
            "public_dns": "ec2-54-219-5-121.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.5.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-092156b8b684e3b8e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f15f7659678aa165",
            "tags": {
              "Name": "prod-svr-web-03"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "root-volume-prod-svr-web-03"
            },
            "vpc_security_group_ids": [
              "sg-0816b6d069cc22d75"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.db_server",
            "module.security_group.aws_security_group.web_server",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": "prod-svr-web-04",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d705db840ec5f0c5",
            "arn": "arn:aws:ec2:us-west-1:126864849194:instance/i-0fc900fe2ffe737a2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fc900fe2ffe737a2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh key",
            "monitoring": true,
            "primary_network_interface_id": "eni-00969a28f3aab0350",
            "private_dns": "ip-192-168-0-153.us-west-1.compute.internal",
            "private_ip": "192.168.0.153",
            "public_dns": "ec2-52-53-225-27.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.225.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0bc7ad6b9c03b1317",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f15f7659678aa165",
            "tags": {
              "Name": "prod-svr-web-04"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "root-volume-prod-svr-web-04"
            },
            "vpc_security_group_ids": [
              "sg-0816b6d069cc22d75"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.db_server",
            "module.security_group.aws_security_group.web_server",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f01982969db4faea",
            "owner_id": "126864849194",
            "tags": {
              "Name": "igw-prod-vpc"
            },
            "vpc_id": "vpc-0e445ded02b8e3ff2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02945d7a9087b13bd",
            "id": "nat-0f0675e661e427cc5",
            "network_interface_id": "eni-099a4e5cf5619d28c",
            "private_ip": "192.168.0.94",
            "public_ip": "54.219.109.232",
            "subnet_id": "subnet-0f15f7659678aa165",
            "tags": {
              "Name": "nat-prod-public-subnet"
            }
          },
          "dependencies": [
            "module.gateway.aws_eip.nat_eip",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05cd5ade335e9a3b4",
            "owner_id": "126864849194",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0f0675e661e427cc5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-nat"
            },
            "vpc_id": "vpc-0e445ded02b8e3ff2"
          },
          "dependencies": [
            "module.gateway.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af9e8a49a2e0137f",
            "route_table_id": "rtb-05cd5ade335e9a3b4",
            "subnet_id": "subnet-07752cf073680cbbc"
          },
          "dependencies": [
            "module.gateway.aws_eip.nat_eip",
            "module.gateway.aws_nat_gateway.nat",
            "module.routing.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:126864849194:security-group/sg-07ec24f66d9152b6c",
            "description": "Defines security groups for db server (private subnet)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access to any IPv4 address",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access to any IPv4 address",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-07ec24f66d9152b6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "75.37.203.213/32",
                  "192.168.0.0/24"
                ],
                "description": "RDP access from instances on public subnet",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "75.37.203.213/32",
                  "192.168.0.0/24"
                ],
                "description": "SSH access from instances on public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "db_server_sg",
            "name_prefix": null,
            "owner_id": "126864849194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e445ded02b8e3ff2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:126864849194:security-group/sg-0816b6d069cc22d75",
            "description": "Defines security groups for web server (public subnet)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access to any IPv4 address",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access to any IPv4 address",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "RDP access to instances on private subnet",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "SSH access to instances on private subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0816b6d069cc22d75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access from any IPv4 address",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access from any IPv4 address",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "75.37.203.213/32"
                ],
                "description": "RDP access from Home/Dev network",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "75.37.203.213/32"
                ],
                "description": "SSH access from Home/Dev network",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_server_sg",
            "name_prefix": null,
            "owner_id": "126864849194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e445ded02b8e3ff2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:126864849194:subnet/subnet-07752cf073680cbbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-07752cf073680cbbc",
            "map_public_ip_on_launch": false,
            "owner_id": "126864849194",
            "tags": {
              "Name": "prod-private-subnet"
            },
            "vpc_id": "vpc-0e445ded02b8e3ff2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:126864849194:subnet/subnet-0f15f7659678aa165",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0f15f7659678aa165",
            "map_public_ip_on_launch": true,
            "owner_id": "126864849194",
            "tags": {
              "Name": "prod-public-subnet"
            },
            "vpc_id": "vpc-0e445ded02b8e3ff2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:126864849194:vpc/vpc-0e445ded02b8e3ff2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0699ee093e0a5cd0f",
            "default_route_table_id": "rtb-02a6f43b87ace3dbb",
            "default_security_group_id": "sg-05d94a44e8009f6e7",
            "dhcp_options_id": "dopt-aa7773cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e445ded02b8e3ff2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02a6f43b87ace3dbb",
            "owner_id": "126864849194",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}